welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:4: error: not found: value doubleGrandMotif
	doubleGrandMotif();
        ^FlowerCase:12: error: not found: value doubleGrandMotif
	doubleGrandMotif();
        ^